# Sample_sensor_test

./: 测试用例框架搭建.docx
gpio/: BUILD.gn  bundle.json
gpio/src/: led_gpio.c  rgb.c  sample_test.c  tm1637.c
include/: common.h
sensors_i2c/: BUILD.gn  bundle.json  挂载在I2C下的外设开发.docx
sensors_i2c/src/: i2c_test.c  jy901b.c  jy901b_uart.c  sht30.c  sht30_HDF.c  veml7700.c
uart/: BUILD.gn  bundle.json
uart/src/: atgm336.c  uart_test.c
