import("//build/ohos.gni")  
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")

ohos_executable("uart_test") {
  sources = [ "src/uart_test.c" ] 
  include_dirs = [
    "$hdf_framework_path/include",
    "$hdf_framework_path/include/core",
    "$hdf_framework_path/include/osal",
    "$hdf_framework_path/include/platform",
    "$hdf_framework_path/include/utils",
    "$hdf_uhdf_path/osal/include",
    "$hdf_uhdf_path/ipc/include",
    "//base/hiviewdfx/hilog/interfaces/native/kits/include",
    "//third_party/bounds_checking_function/include",
    "//drivers/hdf_core/framework/support/platform/include",
    "//drivers/hdf_core/interfaces/inner_api/core",
    "//samples/include",
  ]

  deps = [ 
    "$hdf_uhdf_path/platform:libhdf_platform",
    "$hdf_uhdf_path/utils:libhdf_utils",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
  ]

  cflags = [
    "-Wall",
    "-Wextra",
    "-Werror",
    "-Wno-format",
    "-Wno-format-extra-args",
  ]

  cflags_c = []
  cflags_cc = []
  ldflags = []
  configs = []
  part_name = "uart"  # 所属部件名称，必选
  install_enable = true # 是否默认安装
}

ohos_executable("atgm336") {
  sources = [ "src/atgm336.c" ] 
  include_dirs = [
    "$hdf_framework_path/include",
    "$hdf_framework_path/include/core",
    "$hdf_framework_path/include/osal",
    "$hdf_framework_path/include/platform",
    "$hdf_framework_path/include/utils",
    "$hdf_uhdf_path/osal/include",
    "$hdf_uhdf_path/ipc/include",
    "//base/hiviewdfx/hilog/interfaces/native/kits/include",
    "//third_party/bounds_checking_function/include",
    "//drivers/hdf_core/framework/support/platform/include",
    "//drivers/hdf_core/interfaces/inner_api/core",
    "//drivers/hdf_core/framework/include/platform/gpio_if.h",
    "//samples/include",
  ]

  deps = [ 
    "$hdf_uhdf_path/platform:libhdf_platform",
    "$hdf_uhdf_path/utils:libhdf_utils",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
  ]

  cflags = [
    "-Wall",
    "-Wextra",
    "-Werror",
    "-Wno-format",
    "-Wno-format-extra-args",
  ]

  cflags_c = []
  cflags_cc = []
  ldflags = []
  configs = []
  part_name = "uart"  # 所属部件名称，必选
  install_enable = true # 是否默认安装
}
